# bedtime-story-agent

./: .env  .env.example  README.md  bedtime_story_agent_tdd.md  create_video.sh  pyproject.toml  requirements.txt
bedtime_story_agent/: agent.py  config.py
bedtime_story_agent/sub_agents/audiobook_generator/: audiobook_generator_agent.py
bedtime_story_agent/sub_agents/audiobook_generator/tools/: text_to_speech_tool.py
bedtime_story_agent/sub_agents/character_creator/: character_creator_agent.py
bedtime_story_agent/sub_agents/character_creator/tools/: vision_tool.py
bedtime_story_agent/sub_agents/scene_illustrator/: scene_illustrator_agent.py
bedtime_story_agent/sub_agents/scene_illustrator/tools/: generate_scene_images_tool.py
bedtime_story_agent/sub_agents/story_writer/: story_writer_agent.py
bedtime_story_agent/sub_agents/story_writer/tools/: story_writer_tool.py
