
[tool.poetry]
name = "bedtime-story-agent"
version = "0.1.0"
description = "An agent that creates personalized bedtime stories."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "*"
google-cloud-aiplatform = "*"
# Add other dependencies as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
